<?xml version="1.0"?>
<package>
  <name>robot_path_planning</name>
  <version>0.0.0</version>
  <description>The robot_path_planning package</description>

  <maintainer email="viki@todo.todo">Aldrin Racelis</maintainer>
  <license>ASL</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="viki@todo.todo">Aldrin Racelis</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tf</run_depend>

  <run_depend>rostest</run_depend>

</package>